correct the align property usage

--- a/css/style.css
+++ b/css/style.css
@@ -48,23 +48,16 @@ img {
   justify-content: space-between;
 }
 
-.header__nav {
-  display: flex;
-}
-
+.header__nav,
 .header__contacts {
   display: flex;
+  align-items: center;
 }
 
 .header__nav-list,
 .header__contacts-list {
   display: flex;
   gap: 40px;
-}
-
-.header__nav-list,
-.header__contacts-list {
-  align-items: center;
 }
 
 .header .link {
